@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/field[@name='other_contracts']" position="after">
+        <group name="sepa_mandate_date" string="" colspan="4">
+            <label name="sepa_mandate_date"/>
+            <field name="sepa_mandate_date" xexpand="0" xfill="0"/>
+            <image name="tryton-dialog-warning" xexpand="0" xfill="0"/>
+            <label string="Warning : a new sepa mandate will be created !" id="new_mandate_warning" xalign="0" xexpand="1" xfill="1"/>
+        </group>
+    </xpath>
+    <xpath expr="/form/field[@name='subscriber']" position="after">
+        <field name="need_new_sepa_mandate"/>
+        <field name="max_signature_date"/>
+        <field name="new_sepa_mandate"/>
+    </xpath>
+</data>
