@@ -10,6 +10,12 @@
             <field name="type">form</field>
             <field name="name">contract_form</field>
         </record>
+        <record model="ir.ui.view" id="contract_view_list">
+            <field name="model">contract</field>
+            <field name="type">tree</field>
+            <field name="inherit" ref="contract.contract_view_tree"/>
+            <field name="name">contract_list</field>
+        </record>
         <!-- #################### -->
         <!-- # Contract Balance # -->
         <!-- #################### -->
@@ -49,7 +55,9 @@
             <field name="inherit" ref="premium.premium_view_form"/>
             <field name="name">premium_form</field>
         </record>
-
+        <!-- #################### -->
+        <!-- # Contract Invoice # -->
+        <!-- #################### -->
         <record model="ir.ui.view" id="contract_invoice_view_list">
             <field name="model">contract.invoice</field>
             <field name="type">tree</field>
@@ -123,6 +131,21 @@
             <field name="keyword">form_action</field>
             <field name="model">contract,-1</field>
             <field name="action" ref="act_invoice"/>
+        </record>
+        <!-- ####################### -->
+        <!-- # Change Bank Account # -->
+        <!-- ####################### -->
+        <record model="ir.action.wizard" id="act_change_contract_bank_account">
+            <field name="name">Change Bank Account for Billing</field>
+            <field name="wiz_name">contract.bank_account.change</field>
+        </record>
+        <!-- ############################## -->
+        <!-- # Change Bank Account Select # -->
+        <!-- ############################## -->
+        <record model="ir.ui.view" id="bank_account_change_select_view_form">
+            <field name="model">contract.bank_account.change.select</field>
+            <field name="type">form</field>
+            <field name="name">bank_account_change_select_form</field>
         </record>
     </data>
 </tryton>
