@@ -4,6 +4,8 @@ depends:
     res
     contract_insurance_invoice
     endorsement
+extra_depends:
+    account_payment_sepa_contract
 xml:
     endorsement.xml
     offered.xml
