@@ -1,3 +1,4 @@
+* Add a wizard to change contract bank account
 * Add rating webservice
 * Add invoice dates to description for contract insurance invoices
 * Display invoices in list view in different colors according to state
